Adaptando venda a novo modelo (nao finalizado)

--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -28,7 +28,7 @@
         <ui:include src="./footer.xhtml" />
     </div>
 
-    <h:outputStylesheet name="style/layout.css"  />
+    <h:outputStylesheet name="style/primefaces.css"  />
     <h:outputScript name="layout/script/layout.js"  />
 </h:body>
 
