Finalização de mudança estrutural

--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -29,7 +29,8 @@
     </div>
 
     <h:outputStylesheet name="style/primefaces.css"  />
-    <h:outputScript name="layout/script/layout.js"  />
+    <h:outputStylesheet name="style/primeflex.css"  />
+    <h:outputScript name="script/primefaces.js"  />
 </h:body>
 
 </html>
