--- a/WebContent/cliente_fisico.xhtml
+++ b/WebContent/cliente_fisico.xhtml
@@ -16,88 +16,269 @@
 
 		<h:form id="form">
 			<p:growl id="growl" globalOnly="false" />
-			<p:panel id="panel">
-				<f:facet name="header">
-					<div align="center">
-						<h1>Cadastro de Cliente (Físico)</h1>
-					</div>
-				</f:facet>
-				<div class="ui-g ui-fluid">
-					<div class="ui-g-12">
-						<div class="card card-w-title">
-							<p:panelGrid columns="1"
-								styleClass="form-group ui-panelgrid-blank" layout="grid">
-								<p:commandLink value="Nome: "
+			<p:wizard flowListener="#{physicalClientController.onFlowProcess}">
+				<p:tab id="personal" title="Pessoal">
+					<p:panel header="Detalhes Pessoais">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-9">
+								<p:commandLink value="Nome completo: *"
 									actionListener="#{physicalClientController.openClientListener}"
 									process="@this" update="@none">
 									<p:ajax event="dialogReturn"
 										listener="#{physicalClientController.getPhysicalClientListener}"
 										update="@form" />
-									<p:message for="itName" escape="false" />
 								</p:commandLink>
-								<p:inputText id="itName" value="#{physicalClientController.entity.name}"
-									required="true" requiredMessage="Informe o nome." />
+								<p:inputText id="itName"
+									value="#{physicalClientController.entity.name}" required="true"
+									requiredMessage="Informe o nome." />
+							</div>
 
-								<p:outputLabel value="Cpf: ">
-									<p:message for="itCpf" escape="false" />
-								</p:outputLabel>
-								<p:inputMask id="itCpf" value="#{physicalClientController.entity.cpf}"
-									mask="999.999.999-99" />
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Cpf: *" />
+								<p:inputMask id="itCpf"
+									value="#{physicalClientController.entity.cpf}" required="true"
+									requiredMessage="Informe o cpf." mask="999.999.999-99" />
+							</div>
 
-								<p:outputLabel value="Data de Nascimento: " />
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Data de Nascimento: *" />
 								<p:calendar value="#{physicalClientController.entity.birthDate}"
-									pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
+									pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR"
+									required="true" requiredMessage="Informe a data de nascimento." />
+							</div>
 
-								<p:outputLabel value="Sexo: " />
-								<p:selectOneMenu id="slbSex"
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Sexo: *" />
+								<p:selectOneMenu id="slbSex" required="true"
+									requiredMessage="Informe o sexo."
 									value="#{physicalClientController.entity.sex}" size="1">
 									<f:selectItem itemLabel="Selecione ..." itemValue=""
 										noSelectionOption="true" />
-									<f:selectItems value="#{physicalClientController.listSex}" var="sex"
-										itemLabel="#{sex.label}" itemValue="#{sex}" />
+									<f:selectItems value="#{physicalClientController.listSex}"
+										var="sex" itemLabel="#{sex.label}" itemValue="#{sex}" />
 								</p:selectOneMenu>
-
-								<div>
-									<h:outputText value="Cliente acessará o sistema?" />
-									<p:toggleSwitch id="tsUser"
-										value="#{physicalClientController.userCreation}"
-										disabled="#{physicalClientController.disableToggle()}">
-										<p:ajax update="@form" resetValues="true" />
-									</p:toggleSwitch>
-								</div>
-								<p:outputLabel for="itEmail" value="Email: "
-									rendered="#{physicalClientController.userCreation}">
-									<p:message for="itEmail" escape="false" />
-								</p:outputLabel>
-								<p:inputText id="itEmail"
-									rendered="#{physicalClientController.userCreation}" immediate="true"
-									value="#{physicalClientController.entity.user.email}" />
-							</p:panelGrid>
-
+							</div>
 						</div>
-					</div>
-				</div>
-				<p:toolbar>
-					<f:facet name="left">
-						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
-							update="@form" action="#{physicalClientController.save}" />
+					</p:panel>
+				</p:tab>
 
-						<p:commandButton value="Limpar" process="@this" update="@form"
-							action="#{physicalClientController.clear}">
-							<p:ajax update="@form" resetValues="true" />
-						</p:commandButton>
+				<p:tab id="address" title="Endereço">
+					<p:panel header="Detalhes de Endereço">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Cep: " />
+								<p:inputText required="true" requiredMessage="Informe o cep."
+									value="#{physicalClientController.entity.address.cep}" />
+							</div>
 
-					</f:facet>
+							<div class="p-field p-col-12 p-md-9">
+								<h:outputText value="Rua: " />
+								<p:inputText readonly="true"
+									value="#{physicalClientController.entity.address.street}" />
+							</div>
 
-					<f:facet name="right">
-						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="@form"
-							action="#{physicalClientController.delete}" resetValues="true">
-							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
-						</p:commandButton>
-					</f:facet>
-				</p:toolbar>
-			</p:panel>
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Número: *" />
+								<p:inputText required="true" requiredMessage="Informe o número."
+									value="#{physicalClientController.entity.address.number}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Bairro: " />
+								<p:inputText readonly="true"
+									value="#{physicalClientController.entity.address.neighborhood}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputLabel value="Estado: " />
+								<p:selectOneMenu id="somState"
+									value="#{physicalClientController.state}">
+									<p:ajax event="change"
+										listener="#{physicalClientController.getCityListener}"
+										update="somCity" />
+									<f:selectItem itemLabel="" itemValue=""
+										noSelectionOption="true" />
+									<f:selectItems
+										value="#{physicalClientController.getStateListener()}" />
+								</p:selectOneMenu>
+							</div>
+
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Cidade: " />
+								<p:selectOneMenu id="somCity"
+									value="#{physicalClientController.entity.address.city}"
+									size="1">
+									<f:selectItem itemLabel="" itemValue=""
+										noSelectionOption="true" />
+									<f:selectItems
+										value="#{physicalClientController.getCityListener()}"
+										var="city" itemLabel="#{city.name}" itemValue="#{city}" />
+								</p:selectOneMenu>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Complemento: " />
+								<p:inputTextarea
+									value="#{physicalClientController.entity.address.complement}" />
+							</div>
+						</div>
+					</p:panel>
+				</p:tab>
+
+				<p:tab id="contact" title="Contato">
+					<p:panel id="panelContact" header="Informações de Contato">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-1">
+								<h:outputText value="Telefones: " />
+							</div>
+
+							<div class="p-field p-col-12 p-md-1">
+								<p:inputText id="itAreaCode"
+									value="#{physicalClientController.phone.areaCode}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-9">
+								<p:inputText id="itPhoneNumber"
+									value="#{physicalClientController.phone.number}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-1">
+								<p:commandButton icon="pi pi-save"
+									update="itAreaCode itPhoneNumber dtPhones"
+									actionListener="#{physicalClientController.savePhone()}">
+								</p:commandButton>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<p:dataTable id="dtPhones" var="entity"
+									value="#{physicalClientController.entity.phones}">
+									<p:column headerText="Código de Área">
+										<h:outputLabel value="( #{entity.areaCode} )" />
+									</p:column>
+									<p:column headerText="Número">
+										<h:outputLabel value="#{entity.number}" />
+									</p:column>
+									<p:column headerText="Ação">
+										<p:commandButton icon="pi pi-pencil" process="@this"
+											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
+											actionListener="#{physicalClientController.editPhone(entity)}">
+										</p:commandButton>
+										<p:commandButton icon="pi pi-trash" process="@this"
+											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
+											actionListener="#{physicalClientController.removePhone(entity)}">
+										</p:commandButton>
+									</p:column>
+								</p:dataTable>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Email: *" />
+								<p:inputText
+									value="#{physicalClientController.entity.user.email}"
+									required="true" requiredMessage="Informe o email."
+									label="Email" />
+							</div>
+						</div>
+					</p:panel>
+				</p:tab>
+
+				<p:tab id="confirm" title="Confirmação">
+					<p:panel header="Confirmação">
+						<div class="ui-fluid p-formgrid p-grid" style="padding: 10px;">
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Nome: *" />
+									<h:outputText value="#{physicalClientController.entity.name}" />
+
+									<h:outputText value="Cpf: *" />
+									<h:outputText value="#{physicalClientController.entity.cpf}" />
+
+									<h:outputText value="Data de Nascimento: *" />
+									<h:outputText
+										value="#{physicalClientController.entity.birthDate}"
+										pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
+
+									<h:outputText value="Sexo: *" />
+									<h:outputText value="#{physicalClientController.entity.sex}" />
+								</h:panelGrid>
+							</div>
+
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Cep: *" />
+									<h:outputText
+										value="#{physicalClientController.entity.address.cep}" />
+
+									<h:outputText value="Rua: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.street}" />
+
+									<h:outputText value="Número: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.number}" />
+
+									<h:outputText value="Bairro: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.neighborhood}" />
+
+									<h:outputText value="Estado: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.city.state.name}" />
+
+									<h:outputText value="Cidade: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.city.name}" />
+
+									<h:outputText value="Complemento: " />
+									<h:outputText
+										value="#{physicalClientController.entity.address.complement}" />
+								</h:panelGrid>
+							</div>
+
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Telefones cadastrados: " />
+									<h:outputText
+										value="#{physicalClientController.entity.phones.size()}" />
+
+									<h:outputText value="Email: *" />
+									<h:outputText  id="itEmail"
+										value="#{physicalClientController.entity.user.email}"
+										required="true" label="Email" />
+								</h:panelGrid>
+							</div>
+						</div>
+
+						<p:commandButton value="Salvar e Concluir"
+							action="#{physicalClientController.save}" update="growl"
+							process="@this" />
+					</p:panel>
+				</p:tab>
+			</p:wizard>
+
+			<p:toolbar style="background-color: transparent; border: 0;">
+				<f:facet name="left">
+					<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
+						update="@form" action="#{physicalClientController.save}" />
+
+					<p:commandButton value="Limpar" process="@this" update="@form"
+						action="#{physicalClientController.clear}">
+						<p:ajax update="@form" resetValues="true" />
+					</p:commandButton>
+
+				</f:facet>
+
+				<f:facet name="right">
+					<p:commandButton value="Excluir" icon="pi pi-trash" process="@form"
+						update="@form" action="#{legalClientController.delete}"
+						resetValues="true">
+						<p:confirm header="Confirmação" message="Confirma a exclusão?" />
+					</p:commandButton>
+				</f:facet>
+			</p:toolbar>
 
 			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
 				<p:commandButton value="Sim" type="button"
