--- a/WebContent/funcionario.xhtml
+++ b/WebContent/funcionario.xhtml
@@ -4,30 +4,6 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 
-	<ui:define name="head">
-		<style type="text/css">
-.ui-panelgrid.form-elements .ui-grc-2 {
-	padding-left: 60px;
-}
-
-@media ( max-width :1024px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 20px;
-	}
-}
-
-@media ( max-width :640px) {
-	.ui-panelgrid.form-elements .ui-grc-2 {
-		padding-left: 6px;
-	}
-}
-
-.dialogDemo label {
-	line-height: 2.1em;
-}
-</style>
-	</ui:define>
-
 	<ui:define name="content">
 
 		<p:ajaxStatus onstart="PF('statusDialog').show()"
@@ -38,101 +14,280 @@
 			<p:graphicImage name="/images/loading.gif" />
 		</p:dialog>
 
-		<h:form>
+		<h:form id="form">
 			<p:growl id="growl" globalOnly="false" />
-			<p:panel id="panel">
-				<f:facet name="header">
-					<div align="center">
-						<h1>Cadastro de Funcionários</h1>
-					</div>
-				</f:facet>
-				<div class="ui-g ui-fluid">
-					<div class="ui-g-12">
-						<div class="card card-w-title">
-							<p:panelGrid columns="1"
-								styleClass="form-group ui-panelgrid-blank" layout="grid">
+			<p:wizard flowListener="#{employeeController.onFlowProcess}">
+				<p:tab id="personal" title="Pessoal">
+					<p:panel header="Detalhes Pessoais">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-9">
 								<p:commandLink value="Nome: "
 									actionListener="#{employeeController.openEmployeeListener}"
 									process="@this" update="@none">
 									<p:ajax event="dialogReturn"
 										listener="#{employeeController.getEmployeeListener}"
 										update="@form" />
-									<p:message for="itName" escape="false" />
 								</p:commandLink>
 								<p:inputText id="itName"
 									value="#{employeeController.entity.name}" required="true"
 									requiredMessage="Informe o nome." />
+							</div>
 
-								<p:outputLabel value="Cpf: ">
-									<p:message for="itCpf" escape="false" />
-								</p:outputLabel>
-								<p:inputMask id="itCpf" value="#{employeeController.entity.cpf}"
-									mask="999.999.999-99" />
-
-								<p:outputLabel value="Data de Nascimento: " />
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Data de Nascimento: *" />
 								<p:calendar value="#{employeeController.entity.birthDate}"
+									required="true" requiredMessage="Informe a data de nascimento."
 									pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
+							</div>
 
-								<p:outputLabel value="Sexo: " />
-								<p:selectOneMenu id="slbSex"
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Cpf: *" />
+								<p:inputMask id="itCpf" value="#{employeeController.entity.cpf}"
+									required="true" requiredMessage="Informe o cpf."
+									mask="999.999.999-99" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Sexo: *" />
+								<p:selectOneMenu id="slbSex" required="true"
+									requiredMessage="Informe o sexo."
 									value="#{employeeController.entity.sex}" size="1">
 									<f:selectItem itemLabel="Selecione ..." itemValue=""
 										noSelectionOption="true" />
 									<f:selectItems value="#{employeeController.listSex}" var="sex"
 										itemLabel="#{sex.label}" itemValue="#{sex}" />
 								</p:selectOneMenu>
+							</div>
 
-								<p:outputLabel value="Situação: " />
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Situação: *" />
 								<p:selectOneMenu id="slbSituation"
-									value="#{employeeController.entity.situation}" size="1">
+									value="#{employeeController.entity.situation}" size="1"
+									required="true" requiredMessage="Informe a situação.">
 									<f:selectItem itemLabel="Selecione ..." itemValue=""
 										noSelectionOption="true" />
 									<f:selectItems value="#{employeeController.listSituation}"
 										var="situation" itemLabel="#{situation.label}"
 										itemValue="#{situation}" />
 								</p:selectOneMenu>
-
-								<div>
-									<h:outputText value="Funcionário acessará o sistema?" />
-									<p:toggleSwitch id="tsUser"
-										value="#{employeeController.userCreation}"
-										disabled="#{employeeController.disableToggle()}">
-										<p:ajax update="@form" resetValues="true" />
-									</p:toggleSwitch>
-								</div>
-								<p:outputLabel for="itEmail" value="Email: "
-									rendered="#{employeeController.userCreation}">
-									<p:message for="itEmail" escape="false" />
-								</p:outputLabel>
-								<p:inputText id="itEmail"
-									rendered="#{employeeController.userCreation}" immediate="true"
-									value="#{employeeController.entity.user.email}" />
-							</p:panelGrid>
-
+							</div>
 						</div>
-					</div>
-				</div>
-				<p:toolbar>
-					<f:facet name="left">
-						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
-							update="@form" action="#{employeeController.save}" />
+					</p:panel>
+				</p:tab>
 
-						<p:commandButton value="Limpar" process="@this" update="panel"
-							action="#{employeeController.clear}">
-							<p:ajax update="@form" resetValues="true" />
-						</p:commandButton>
+				<p:tab id="address" title="Endereço">
+					<p:panel header="Detalhes de Endereço">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Cep: " />
+								<p:inputText required="true" requiredMessage="Informe o cep."
+									value="#{employeeController.entity.address.cep}" />
+							</div>
 
-					</f:facet>
+							<div class="p-field p-col-12 p-md-9">
+								<h:outputText value="Rua: " />
+								<p:inputText readonly="true"
+									value="#{employeeController.entity.address.street}" />
+							</div>
 
-					<f:facet name="right">
-						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="@form"
-							action="#{employeeController.delete}">
-							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
-						</p:commandButton>
-					</f:facet>
-				</p:toolbar>
-			</p:panel>
+							<div class="p-field p-col-12 p-md-3">
+								<h:outputText value="Número: *" />
+								<p:inputText required="true" requiredMessage="Informe o número."
+									value="#{employeeController.entity.address.number}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Bairro: " />
+								<p:inputText readonly="true"
+									value="#{employeeController.entity.address.neighborhood}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputLabel value="Estado: " />
+								<p:selectOneMenu id="somState"
+									value="#{employeeController.state}">
+									<p:ajax event="change"
+										listener="#{employeeController.getCityListener}"
+										update="somCity" />
+									<f:selectItem itemLabel="" itemValue=""
+										noSelectionOption="true" />
+									<f:selectItems value="#{employeeController.getStateListener()}" />
+								</p:selectOneMenu>
+							</div>
+
+							<div class="p-field p-col-12 p-md-6">
+								<h:outputText value="Cidade: " />
+								<p:selectOneMenu id="somCity"
+									value="#{employeeController.entity.address.city}" size="1">
+									<f:selectItem itemLabel="" itemValue=""
+										noSelectionOption="true" />
+									<f:selectItems value="#{employeeController.getCityListener()}"
+										var="city" itemLabel="#{city.name}" itemValue="#{city}" />
+								</p:selectOneMenu>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Complemento: " />
+								<p:inputTextarea
+									value="#{employeeController.entity.address.complement}" />
+							</div>
+						</div>
+					</p:panel>
+				</p:tab>
+
+				<p:tab id="contact" title="Contato">
+					<p:panel id="panelContact" header="Informações de Contato">
+						<p:messages />
+						<div class="ui-fluid p-formgrid p-grid">
+							<div class="p-field p-col-12 p-md-1">
+								<h:outputText value="Telefones: " />
+							</div>
+
+							<div class="p-field p-col-12 p-md-1">
+								<p:inputText id="itAreaCode"
+									value="#{employeeController.phone.areaCode}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-9">
+								<p:inputText id="itPhoneNumber"
+									value="#{employeeController.phone.number}" />
+							</div>
+
+							<div class="p-field p-col-12 p-md-1">
+								<p:commandButton icon="pi pi-save"
+									update="itAreaCode itPhoneNumber dtPhones"
+									actionListener="#{employeeController.savePhone()}">
+								</p:commandButton>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<p:dataTable id="dtPhones" var="entity"
+									value="#{employeeController.entity.phones}">
+									<p:column headerText="Código de Área">
+										<h:outputLabel value="( #{entity.areaCode} )" />
+									</p:column>
+									<p:column headerText="Número">
+										<h:outputLabel value="#{entity.number}" />
+									</p:column>
+									<p:column headerText="Ação">
+										<p:commandButton icon="pi pi-pencil" process="@this"
+											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
+											actionListener="#{employeeController.editPhone(entity)}">
+										</p:commandButton>
+										<p:commandButton icon="pi pi-trash" process="@this"
+											update="form:itAreaCode form:itPhoneNumber form:dtPhones"
+											actionListener="#{employeeController.removePhone(entity)}">
+										</p:commandButton>
+									</p:column>
+								</p:dataTable>
+							</div>
+
+							<div class="p-field p-col-12 p-md-12">
+								<h:outputText value="Email: *" />
+								<p:inputText value="#{employeeController.entity.user.email}"
+									required="true" requiredMessage="Informe o email."
+									label="Email" />
+							</div>
+						</div>
+					</p:panel>
+				</p:tab>
+
+				<p:tab id="confirm" title="Confirmação">
+					<p:panel header="Confirmação">
+						<div class="ui-fluid p-formgrid p-grid" style="padding: 10px;">
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Nome: *" />
+									<h:outputText value="#{employeeController.entity.name}" />
+
+									<h:outputText value="Cpf: *" />
+									<h:outputText value="#{employeeController.entity.cpf}" />
+
+									<h:outputText value="Data de Nascimento: *" />
+									<h:outputText value="#{employeeController.entity.birthDate}"
+										pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
+
+									<h:outputText value="Sexo: *" />
+									<h:outputText value="#{employeeController.entity.sex}" />
+
+									<h:outputText value="Situação: *" />
+									<h:outputText value="#{employeeController.entity.situation}" />
+								</h:panelGrid>
+							</div>
+
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Cep: *" />
+									<h:outputText value="#{employeeController.entity.address.cep}" />
+
+									<h:outputText value="Rua: " />
+									<h:outputText
+										value="#{employeeController.entity.address.street}" />
+
+									<h:outputText value="Número: " />
+									<h:outputText
+										value="#{employeeController.entity.address.number}" />
+
+									<h:outputText value="Bairro: " />
+									<h:outputText
+										value="#{employeeController.entity.address.neighborhood}" />
+
+									<h:outputText value="Estado: " />
+									<h:outputText
+										value="#{employeeController.entity.address.city.state.name}" />
+
+									<h:outputText value="Cidade: " />
+									<h:outputText
+										value="#{employeeController.entity.address.city.name}" />
+
+									<h:outputText value="Complemento: " />
+									<h:outputText
+										value="#{employeeController.entity.address.complement}" />
+								</h:panelGrid>
+							</div>
+
+							<div class="p-field p-col-12 p-md-4">
+								<h:panelGrid columns="2" columnClasses="label, value">
+									<h:outputText value="Telefones cadastrados: " />
+									<h:outputText
+										value="#{employeeController.entity.phones.size()}" />
+
+									<h:outputText value="Email: *" />
+									<h:outputText id="itEmail"
+										value="#{employeeController.entity.user.email}"
+										required="true" label="Email" />
+								</h:panelGrid>
+							</div>
+						</div>
+
+						<p:commandButton value="Salvar e Concluir"
+							action="#{employeeController.save}" update="growl"
+							process="@this" />
+					</p:panel>
+				</p:tab>
+			</p:wizard>
+
+			<p:toolbar>
+				<f:facet name="left">
+					<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
+						update="@form" action="#{employeeController.save}" />
+
+					<p:commandButton value="Limpar" process="@this" update="@form"
+						action="#{employeeController.clear}">
+						<p:ajax update="@form" resetValues="true" />
+					</p:commandButton>
+
+				</f:facet>
+
+				<f:facet name="right">
+					<p:commandButton value="Excluir" icon="pi pi-trash" process="@form"
+						update="@form" action="#{employeeController.delete}">
+						<p:confirm header="Confirmação" message="Confirma a exclusão?" />
+					</p:commandButton>
+				</f:facet>
+			</p:toolbar>
 
 			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
 				<p:commandButton value="Sim" type="button"
@@ -140,7 +295,7 @@
 				<p:commandButton value="Não" type="button"
 					styleClass="ui-confirmdialog-no" />
 			</p:confirmDialog>
-
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
