Carrinho vinculado a template

--- a/WebContent/WEB-INF/topbar.xhtml
+++ b/WebContent/WEB-INF/topbar.xhtml
@@ -7,6 +7,9 @@
 	<div class="layout-topbar">
 		<div class="layout-topbar-content">
 			<div class="logo" />
+			<div class="icons">
+				<a href="../carrinho.xhtml"><img id="cart" /></a>
+			</div>
 
 			<p:commandLink value="Olá #{templateController.logUser} (Sair)"
 				rendered="#{templateController.logUser != null}"
