--- a/WebContent/WEB-INF/sidebar.xhtml
+++ b/WebContent/WEB-INF/sidebar.xhtml
@@ -31,11 +31,11 @@
 					class="pi pi-chevron-down" />
 			</span>
 				<ul>
-					<li><a href="./cliente_fisico.xhtml">Cliente Físico</a></li>
-					<li><a href="./cliente_juridico.xhtml">Cliente Jurídico</a></li>
-					<li><a href="./fornecedor.xhtml">Fornecedor</a></li>
-					<li><a href="./funcionario.xhtml">Funcionário</a></li>
-					<li><a href="./produto_carne.xhtml">Produto</a></li>
+					<li><a href="../pages/cliente_fisico.xhtml">Cliente Físico</a></li>
+					<li><a href="../pages/cliente_juridico.xhtml">Cliente Jurídico</a></li>
+					<li><a href="../pages/fornecedor.xhtml">Fornecedor</a></li>
+					<li><a href="../pages/funcionario.xhtml">Funcionário</a></li>
+					<li><a href="../pages/produto_carne.xhtml">Produto</a></li>
 				</ul></li>
 			<li><span class="opener">Produtos <i
 					class="pi pi-chevron-down" /></span>
